--- a/_config.yml
+++ b/_config.yml
@@ -41,41 +41,49 @@ img_cdn: "https://chirpy-img.netlify.app"
 
 avatar: "https://avatars.githubusercontent.com/u/80456739?v=4"
 
+# boolean type, the global switch for TOC in posts.
 toc: true
 
 comments:
-  active:
+  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  # The active options are as follows:
   disqus:
-    shortname: 
+    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  # utterances settings › https://utteranc.es/
   utterances:
-    repo: 
-    issue_term: 
- 
+    repo: # <gh-username>/<repo>
+    issue_term: # < url | pathname | title | ...>
+  # Giscus options › https://giscus.app
   giscus:
-    repo:
+    repo: # <gh-username>/<repo>
     repo_id:
     category:
     category_id:
-    mapping: 
-    input_position:
-    lang:
-    reactions_enabled: 
+    mapping: # optional, default to 'pathname'
+    input_position: # optional, default to 'bottom'
+    lang: # optional, default to the value of `site.lang`
+    reactions_enabled: # optional, default to the value of `1`
 
+# Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
   self_host:
-    enabled: 
+    enabled: # boolean, keep empty means false
+    # specify the Jekyll environment, empty means both
+    # only works if `assets.self_host.enabled` is 'true'
+    env: # [development|production]
 
-    env: 
 pwa:
-  enabled: false
+  enabled: false # the option for PWA feature
 
 paginate: 10
 
+# ------------ The following options are not recommended to be modified ------------------
+
 kramdown:
   syntax_highlighter: rouge
-  syntax_highlighter_opts: 
+  syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
     css_class: highlight
-
+    # default_lang: console
     span:
       line_numbers: false
     block:
@@ -89,12 +97,14 @@ collections:
 
 defaults:
   - scope:
-      path: ""
+      path: "" # An empty string here means all files in the project
       type: posts
     values:
       layout: post
-      comments: true
-      toc: true 
+      comments: true # Enable comments in posts.
+      toc: true # Display TOC column in posts.
+      # DO NOT modify the following parameter unless you are confident enough
+      # to update the code of all other post links in this project.
       permalink: /posts/:title/
   - scope:
       path: _drafts
@@ -102,7 +112,7 @@ defaults:
       comments: false
   - scope:
       path: ""
-      type: tabs 
+      type: tabs # see `site.collections`
     values:
       layout: page
       permalink: /:title/
