--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ Gemfile.lock
 .jekyll-cache
 .jekyll-metadata
 _site
-_app
 
 # RubyGems
 *.gem
@@ -18,10 +17,9 @@ package-lock.json
 
 # IDE configurations
 .idea
-.vscode/*
+.vscode
 !.vscode/settings.json
 !.vscode/extensions.json
-!.vscode/tasks.json
 
 # Misc
 _sass/dist
