--- a/_config.yml
+++ b/_config.yml
@@ -188,7 +188,10 @@ defaults:
     values:
       layout: page
       permalink: /:title/
-
+  - scope:
+      path: assets/js/dist
+    values:
+      swcache: true
 sass:
   style: compressed
 
