--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ tagline: Professional Dumbass
 description: >- 
   A place of Pain, Projects and Problems.
 
-url: "https://ifsvivek.github.io"
+url: "https://ifsvivek.tech"
 
 github:
   username: ifsvivek  
@@ -29,7 +29,7 @@ social:
     - https://github.com/ifsvivek
 
 
-google_site_verification: 
+google_site_verification: 4rKwiwZI3XIWHxLXHPh4f4M9A4BAxlcav8edRNSnphA
 
 
 google_analytics:
